fix: toggle video on iOS

--- a/src/shortVideo.module.css
+++ b/src/shortVideo.module.css
@@ -1,5 +1,6 @@
 .thumbnail {
   position: absolute;
+  pointer-events: none;
 }
 
 .muteButton {
